[project]
name = "pysatgeo"
version = "0.4.2"
dynamic = [
    "dependencies",
]
description = "Python package for raster and vector geospatial processing"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "pysatgeo",
    "geospatial",
    "raster",
    "vector",
]
license = {text = "MIT License"}
authors = [
  {name = "Joao Pereira", email = "joaopmpereira93@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/JPPereira93/pysatgeo"
Issues = "https://github.com/JPPereira93/pysatgeo/issues"


[tool]
[tool.setuptools.packages.find]
include = ["pysatgeo*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.bumpversion]
current_version = "0.4.2"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pysatgeo/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
